welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: not found: value c
  c=Math.abs(10-a)
  ^close10:4: error: not found: value d
  d=Math.abs(10-b)
  ^close10:5: error: not found: value c
  if(c<d)
     ^close10:5: error: not found: value d
  if(c<d)
       ^close10:7: error: not found: value c
    return c
           ^close10:9: error: not found: value c
  if(c>d)
     ^close10:9: error: not found: value d
  if(c>d)
       ^close10:11: error: not found: value d
    return d
           ^close10:13: error: not found: value c
  if(c==d)
     ^close10:13: error: not found: value d
  if(c==d)
        ^close10:13: error: type mismatch;
 found   : Unit
 required: Int
  if(c==d)
  ^