welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int =
{
  c=Math.abs(10-a)
  d=Math.abs(10-b)
  if(c<d)
  {
    return c
  }
  if(c>d)
  {
    return d
  }
  if(c==d)
  {
    return 0
  }
}